testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/Try16.adl
CONTEXT Try16 IN ENGLISH

PURPOSE PATTERN Try16 IN ENGLISH 
{+
This pattern is meant to test the translation of Interfaces in Ampersand.
+}

PATTERN Try16
  r :: A*A
  s :: A*A
  t :: A*A
ENDPATTERN

INTERFACE "TEST Try16": I[A] cRud BOX [ id : I ]
INTERFACE "TEST Try16": I[B] cRud BOX [ id : I ]
ENDCONTEXT

{- 
   Purpose: to check that uniqueness of INTERFACE labels are tested.
   Result: FAIL
   Reason: on line 14 and 15 there are two views with the same name.
   
   Message:
C:> ampersand check Try16.adl
Reading file /Users/sjo00577/git/Ampersand/testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/Try16.adl
/Users/sjo00577/git/Ampersand/testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/Try16.adl:14:1 error:
  Every interface must have a unique name. "TEST Try16", however, is used at:/Users/sjo00577/git/Ampersand/testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/Try16.adl:14:1
      /Users/sjo00577/git/Ampersand/testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/Try16.adl:15:1.
ExitFailure 10
C:>
-}